<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:viewBindingIgnore="true"
    tools:context=".android.movies.features.MovieSearchFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/search_header"
        android:textSize="25sp" />

    <EditText
        android:id="@+id/movie_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="15dp"
        android:hint="@string/search_hint"
        android:inputType="text" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/search_button1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/livedata" />

            <Button
                android:id="@+id/search_button2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/flow" />

            <Button
                android:id="@+id/search_button3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/flowV2" />

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</LinearLayout>
